force-app/main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <description>Log a Platform Exception on Salesforce</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXL-{0000}-{YYYY}.{MM}.{DD}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>