force-app/main/default/objects/ExceptionLog__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>The Apex Class the exception occurred in.</description>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>