force-app/main/default/objects/ExceptionLog__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <label>Error Log</label>
    <referenceTo>ErrorLog__c</referenceTo>
    <relationshipLabel>Exception Logs</relationshipLabel>
    <relationshipName>Exception_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>