force-app/main/default/objects/ExceptionLog__c/fields/ExceptionLog__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Log</label>
    <referenceTo>ExceptionLog__c</referenceTo>
    <relationshipLabel>Exception Logs</relationshipLabel>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>