force-app/main/default/objects/ExceptionLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The exception message.</description>
    <label>Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>