force-app/main/default/objects/ExceptionLog__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>The Page the exception occurred on.</description>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>