force-app/main/default/objects/ExceptionLog__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>The related Record the exception occurred on.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>