force-app/main/default/objects/ExceptionLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>The exception Stack Trace</description>
    <label>Stack Trace</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>