force-app/main/default/objects/ExceptionLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Exception Type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AsyncException</fullName>
            </value>
            <value>
                <fullName>BigObjectException</fullName>
            </value>
            <value>
                <fullName>CalloutException</fullName>
            </value>
            <value>
                <fullName>DmlException</fullName>
            </value>
            <value>
                <fullName>EmailException</fullName>
            </value>
            <value>
                <fullName>ExternalObjectException</fullName>
            </value>
            <value>
                <fullName>IllegalArgumentException</fullName>
            </value>
            <value>
                <fullName>InvalidParameterValueException</fullName>
            </value>
            <value>
                <fullName>LimitException</fullName>
            </value>
            <value>
                <fullName>JSONException</fullName>
            </value>
            <value>
                <fullName>ListException</fullName>
            </value>
            <value>
                <fullName>MathException</fullName>
            </value>
            <value>
                <fullName>NoAccessException</fullName>
            </value>
            <value>
                <fullName>NoDataFoundException</fullName>
            </value>
            <value>
                <fullName>NoSuchElementException</fullName>
            </value>
            <value>
                <fullName>NullPointerException</fullName>
            </value>
            <value>
                <fullName>QueryException</fullName>
            </value>
            <value>
                <fullName>RequiredFeatureMissing</fullName>
            </value>
            <value>
                <fullName>SearchException</fullName>
            </value>
            <value>
                <fullName>SecurityException</fullName>
            </value>
            <value>
                <fullName>SerializationException</fullName>
            </value>
            <value>
                <fullName>SObjectException</fullName>
            </value>
            <value>
                <fullName>StringException</fullName>
            </value>
            <value>
                <fullName>TypeException</fullName>
            </value>
            <value>
                <fullName>VisualforceException</fullName>
            </value>
            <value>
                <fullName>XmlException</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>